# Hypersolve

./: .gitignore  Cargo.toml  LICENSE  README.md  build.bat  file_descriptions.txt  shared.txt
hypersolve/: Cargo.toml
hypersolve-lib/: Cargo.toml  build.rs
hypersolve-lib/benches/: bench_main.rs
hypersolve-lib/benches/benchmarks/: mod.rs  scramble.rs
hypersolve-lib/hypersolve-core/: Cargo.toml  build.rs
hypersolve-lib/hypersolve-core/hypersolve-base/: Cargo.toml
hypersolve-lib/hypersolve-core/hypersolve-base/src/: lib.rs  macros.rs  math.rs  orientation.rs  permutation.rs
hypersolve-lib/hypersolve-core/hypersolve-base/src/groups/: a4.rs  c3.rs  k4.rs  mod.rs  permutation.rs
hypersolve-lib/hypersolve-core/hypersolve-base/src/puzzle/: axis.rs  cube.rs  face.rs  mod.rs  notation.rs  piece.rs  sign.rs  twist.rs
hypersolve-lib/hypersolve-core/src/: cube.rs  lib.rs  move_index.rs  move_iterator.rs  phases.rs
hypersolve-lib/src/: bound.rs  cube_index.rs  data_loading.rs  depth_queue.rs  fast_solve.rs  lib.rs  macros.rs  node.rs  phases.rs  prune.rs  pub_api.rs  simple_solve.rs  solve.rs
hypersolve-lib/src/common/: face.rs  index.rs  macros.rs  math.rs  mod.rs  parity.rs  sign.rs  vector.rs
hypersolve-lib/src/common/groups/: a4.rs  c3.rs  k4.rs  mod.rs  permutation.rs
hypersolve-lib/src/cubie_cube/: cube.rs  move_index.rs  orientation.rs  permutation.rs
hypersolve-lib/src/groups/: c3.rs  mod.rs
hypersolve-lib/src/node_cube/: mod.rs  node.rs  node_iterator.rs
hypersolve-lib/src/piece_cube/: cube_index.rs  mod.rs  pieces.rs  puzzle.rs  twist.rs
hypersolve-lib/src/puzzle/: axis.rs  cube.rs  cube_index.rs  face.rs  mod.rs  notation.rs  piece.rs  sign.rs  twist.rs
hypersolve-lib/src/solution_iterators/: fixed_length_solution_iterator.rs  mod.rs  next_move_filter.rs  phase_solution_iterator.rs  shortest_solution_iter.rs
hypersolve-lib/src/solver/: cube_index.rs  mod.rs  phases.rs  prune.rs  solve.rs
hypersolve-lib/src/solver/cubie_cube/: const_data.rs  cube.rs  gen_data.rs  mod.rs  move_index.rs  orientation.rs  permutation.rs
hypersolve-lib/src/solver/node_cube/: mod.rs  node.rs  node_iterator.rs
hypersolve/src/: hex_string.rs  lib.rs  main.rs  util.rs
src/: common.rs  cubie_cube.rs  cubiecube.rs  hex_string.rs  lib.rs  macros.rs  main.rs  math.rs  permutations.rs  phases.rs  prune.rs  search.rs  solve.rs  twist.rs
src/common/: axis.rs  face.rs  index.rs  mod.rs  parity.rs  sign.rs  vector.rs
src/cubie_cube/: cube.rs  cubie_cube.rs  gen_data.rs  mod.rs  move_index.rs  orientation.rs  permutation.rs
src/cubiecube/: cubiecube.rs  groups.rs  mod.rs
src/groups/: a4.rs  c3.rs  cyclic.rs  direct_product.rs  k4.rs  permutation.rs
src/node_cube/: mod.rs  node.rs  node_iterator.rs
src/piece_cube/: mod.rs  pieces.rs  puzzle.rs  twist.rs
src_old/: cubiecube.rs  groups.rs  init.rs  main.rs  node.rs  phase1.rs  phase2.rs  phase3.rs  prune.rs  puzzle.rs  utils.rs
src_old_v2/: common.rs  cubiecube.rs  groups.rs  lib.rs  macros.rs  main.rs  math.rs  matrixcube.rs  node.rs  prune.rs  twist.rs
