[package]
name = "hypersolve"
version = "0.1.0"
edition = "2021"
description = "3-Phase 2^4 Rubik's cube solver"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3
panic = "abort"
codegen-units = 1
lto = true

[dependencies]
ambassador = "0.3"
lazy_static = "1.4.0"
enum-primitive-derive = "0.2.2"
itertools = "0.10.5"
num-traits = "^0.1"
num_enum = "0.5.11"
strum_macros = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
smallvec = { version = "1.8", features = ["serde"] }
strum = { version = "0.24", features = ["derive"] }
regex = "1.6"
enum-iterator = "1.1"
enum_dispatch = "0.3"
once_cell = "1.17.1"
rayon = "1.7.0"
clap = { version = "4.3.0", features = ["derive"] }
indicatif = "0.17.3"
bit-vec = "0.6.3"

[features]
default = ["gen-const-data"]
gen-const-data = []
