[package]
name = "hypersolve-lib"
authors = ["Anderson Taurence <ajtaurence@gmail.com>"]
version = "0.1.0"
edition = "2021"
description = "An efficient 3-Phase 2^4 Rubik's Cube solver"
license = "MIT"
repository = "https://github.com/ajtaurence/Hypersolve/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3
panic = "abort"
codegen-units = 1
lto = true

[dependencies]
enum-primitive-derive = "0.2.2"
itertools = "0.10.5"
num-traits = "^0.1"
num_enum = "0.5.11"
strum_macros = "0.24"
serde = { version = "1.0", features = ["derive"] }
strum = { version = "0.24", features = ["derive"] }
enum-iterator = "1.1"
once_cell = "1.17.1"
rayon = "1.7.0"
rkyv = "0.7.42"
derivative = "2.2.0"
thiserror = "1.0.53"

# Optional dependencies
indicatif = { version = "0.17.7", features = ["rayon"], optional = true }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
rand = "0.8.5"

[[bench]]
name = "bench_main"
harness = false

[features]
default = []
progress = ["indicatif"]
# Generates data files at runtime to be loaded as const when feature is disabled
gen-const-data = []
