[package]
name = "hypersolve-lib"
authors = ["Anderson Taurence <ajtaurence@gmail.com>"]
version = "0.1.0"
edition = "2021"
description = "An efficient 3-Phase 2^4 Rubik's Cube solver"
license = "MIT"
repository = "https://github.com/ajtaurence/Hypersolve/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3
panic = "abort"
codegen-units = 1
lto = true
overflow-checks = false

[dependencies]
rkyv = "0.7.44"
rayon = "1.10.0"
once_cell = "1.19.0"
thiserror = "1.0.61"
nohash-hasher = "0.2.0"
hypersolve-core = { path = "hypersolve-core" }

# Optional dependencies
indicatif = { version = "0.17.8", features = ["rayon"], optional = true }

[build-dependencies]
const-gen = "1.6.4"
itertools = "0.13.0"
rayon = "1.10.0"
hypersolve-core = { path = "hypersolve-core" }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
rand = "0.8.5"

[[bench]]
name = "bench_main"
harness = false

[features]
progress = ["indicatif"]
