[package]
name = "hypersolve"
authors = ["Anderson Taurence <ajtaurence@gmail.com>"]
version = "0.1.0"
edition = "2021"
description = "Efficient 3-Phase 2^4 Rubik's Cube solver"
license = "MIT"
repository = "https://github.com/ajtaurence/Hypersolve/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3
panic = "abort"
codegen-units = 1
lto = true
overflow-checks = false

[dependencies]
clap = { version = "4.5.7", features = ["derive", "color"] }
getrandom = "0.2.15"
hex = "0.4.3"
sha2 = "0.10.8"
colored = "2.1.0"
human-panic = "1.2.3"
thiserror = "1.0.61"

hypersolve-lib = { path = "../hypersolve-lib", features = ["progress"] }
