[package]
name = "hypersolve-base"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
codegen-units = 1
lto = true
overflow-checks = false
panic = "abort"

[dependencies]
const_for = "0.1.4"
itertools = "0.13.0"
num_enum = "0.7.2"
once_cell = "1.19.0"
static_assertions = "1.1.0"
strum = { version = "0.26.2", features = ["derive"] }
thiserror = "1.0.61"
const-gen = { version = "1.6.4", features=["const-gen-derive"] }
